<resources>
    <string name="app_name">AndroidDesignApp</string>
    <string name="new_user">New user?</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome back,</string>
    <string name="sign_in_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
</resources>