<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".LinearLayoutGravityActivity">

    <ImageView
        android:layout_width="120dp"
        android:src="@drawable/facebook_icon"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_marginTop="20dp"
        android:layout_height="120dp">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        >

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/sign_in_continue"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorGray"
        android:layout_height="wrap_content">

    </TextView>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_weight="1"
       android:gravity="bottom"
       android:orientation="vertical"
       android:layout_height="wrap_content">

       <TextView
           android:layout_width="match_parent"
           android:text="@string/email"
           android:textColor="@color/colorBlack"
           android:textSize="18sp"
           android:textStyle="bold"
           android:layout_height="wrap_content">

       </TextView>

       <EditText
           android:hint="@string/email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

       </EditText>

       <TextView
           android:layout_width="match_parent"
           android:text="@string/password"
           android:layout_marginTop="20dp"
           android:textColor="@color/colorBlack"
           android:textSize="18sp"
           android:textStyle="bold"
           android:layout_height="wrap_content">

       </TextView>

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password"
           >

       </EditText>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:textSize="18sp"
           android:textColor="@color/colorGray"
           android:textStyle="bold"
           android:gravity="right"
           android:text="@string/forgot_password"
           >

       </TextView>

       <Button
           android:layout_width="match_parent"
           android:background="@color/colorGreen"
           android:text="@string/login"
           android:textColor="@color/colorWhite"
           android:layout_marginTop="20dp"
           android:layout_height="wrap_content">

       </Button>

       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="horizontal"
           android:gravity="center"
           android:layout_marginTop="20dp"
           android:layout_height="wrap_content">

           <TextView
               android:layout_width="wrap_content"
               android:text="@string/new_user"
               android:textColor="@color/colorGray"
               android:textSize="16sp"
               android:layout_height="wrap_content">

           </TextView>

           <TextView
               android:layout_width="wrap_content"
               android:text="@string/sign_in"
               android:textColor="@color/colorGreen"
               android:textSize="16sp"
               android:layout_marginLeft="5dp"
               android:textStyle="bold"
               android:layout_height="wrap_content">

           </TextView>

       </LinearLayout>

   </LinearLayout>

</LinearLayout>