<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".LoginScreenWithRelativeLayoutActivity">

    <ImageView
        android:id="@+id/imgFacebook"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/facebook_icon">

    </ImageView>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgFacebook"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWelcome"
        android:layout_marginTop="5dp"
        android:text="@string/sign_in_continue"
        android:textColor="@color/colorGray"
        android:textStyle="bold">

    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmail">

        </EditText>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtEmail"
            android:text="@string/password"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassword">

        </EditText>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtPassword"
            android:layout_alignParentEnd="true"
            android:text="@string/forgot_password"
            android:textColor="@color/colorGray"
            android:textStyle="bold">

        </TextView>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvForgotPassword"
            android:layout_marginTop="20dp"
            android:background="@color/colorPink"
            android:text="@string/login"
            android:textColor="@color/colorWhite">

        </Button>

        <TextView
            android:id="@+id/tvNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnLogin"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorGray"
            android:text="@string/new_user">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tvNewUser"
            android:layout_below="@+id/btnLogin"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorPink"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/sign_in">

        </TextView>


    </RelativeLayout>

</RelativeLayout>